// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`implementation option 'dart-sass', 'modern' API: errors 1`] = `Array []`;

exports[`implementation option 'dart-sass', 'modern' API: warnings 1`] = `Array []`;

exports[`implementation option 'dart-sass', 'old' API: errors 1`] = `Array []`;

exports[`implementation option 'dart-sass', 'old' API: warnings 1`] = `Array []`;

exports[`implementation option 'node-sass', 'old' API: errors 1`] = `Array []`;

exports[`implementation option 'node-sass', 'old' API: warnings 1`] = `Array []`;

exports[`implementation option 'sass_string', 'old' API: errors 1`] = `Array []`;

exports[`implementation option 'sass_string', 'old' API: warnings 1`] = `Array []`;

exports[`implementation option 'sass-embedded', 'modern' API: errors 1`] = `Array []`;

exports[`implementation option 'sass-embedded', 'modern' API: warnings 1`] = `Array []`;

exports[`implementation option 'sass-embedded', 'old' API: errors 1`] = `Array []`;

exports[`implementation option 'sass-embedded', 'old' API: warnings 1`] = `Array []`;

exports[`implementation option not specify with modern API: errors 1`] = `Array []`;

exports[`implementation option not specify with modern API: warnings 1`] = `Array []`;

exports[`implementation option not specify with old API: errors 1`] = `Array []`;

exports[`implementation option not specify with old API: warnings 1`] = `Array []`;

exports[`implementation option not specify: errors 1`] = `Array []`;

exports[`implementation option not specify: warnings 1`] = `Array []`;

exports[`implementation option should not swallow an error when trying to load a sass implementation: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Some error",
]
`;

exports[`implementation option should not swallow an error when trying to load a sass implementation: warnings 1`] = `Array []`;

exports[`implementation option should throw an error on an unknown sass implementation: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Unknown Sass implementation \\"strange-sass\\".",
]
`;

exports[`implementation option should throw an error on an unknown sass implementation: warnings 1`] = `Array []`;

exports[`implementation option should throw an error when the "info" is unparseable: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Unknown Sass implementation \\"asdfj\\".",
]
`;

exports[`implementation option should throw an error when the "info" is unparseable: warnings 1`] = `Array []`;

exports[`implementation option should throw error when the "info" does not exist: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
Unknown Sass implementation.",
]
`;

exports[`implementation option should throw error when the "info" does not exist: warnings 1`] = `Array []`;

exports[`implementation option should throw error when unresolved package: errors 1`] = `
Array [
  "ModuleError: Module Error (from ../src/cjs.js):
(Emitted value instead of an instance of Error) Error: Cannot find module 'unresolved' from 'src/utils.js'",
]
`;

exports[`implementation option should throw error when unresolved package: warnings 1`] = `Array []`;
